<resources>
    <string name="app_name">SolSolAndroid</string>
    <string name="home">홈</string>
    <string name="money_bus">머니버스</string>
    <string name="product">상품</string>
    <string name="benefit">혜택</string>
    <string name="all_menu">전체 메뉴</string>
    <string name="ad_sample_title">평소 입는 옷으로 꾸꾸 하객룩 완성?</string>
    <string name="ad_sample_description">결혼식에 입기 좋은 남녀 코디법</string>
    <string name="my_account">내 계좌</string>
    <string name="all_account_look">전체보기</string>
    <string name="sinhan_plus">신한플러스</string>
    <string name="card">카드</string>
    <string name="stock">증권</string>
    <string name="insurance">보험</string>
    <string name="ride_takeout">배달/포장</string>
    <string name="eye_tasty_order">눈으로 즐기는 미식 주문</string>
    <string name="return_cup">컵 반환</string>
    <string name="soltips">쏠팁쓰</string>
    <string name="story_bank">스토리뱅크</string>
    <string name="sol_wallet">쏠지갑</string>
    <string name="sol_baseball">쏠야구</string>
    <string name="card_allow">카드 승인</string>
    <string name="current_stock">주식 현재가</string>
    <string name="co_privacy">공동인증서</string>
    <string name="transfer">이체</string>
    <string name="hey_young">헤이영 머니박스</string>
    <string name="title_activity_transfer3">Transfer3Activity</string>

    <!-- transfer3 -->
    <string name="transfer3_user">조정연</string>
    <string name="transfer3_nim">님께</string>
    <string name="transfer3_account_name">카카오뱅크</string>
    <string name="transfer3_account_number">3333329999933</string>
    <string name="transfer3_send_money">10,000원</string>
    <string name="transfer3_send_messeage">보낼까요?</string>
    <string name="transfer3_recipient">받는분 메모</string>
    <string name="transfer3_memos">내통장 메모</string>
    <string name ="transfer3_charge">수수료</string>
    <string name="transfer3_free">면제</string>
    <string name="transfer3_information">추가정보</string>
    <string name="transfer3_send">이체</string>
    <string name="transfer3_plus_send">추가이체</string>
    <string name="who_send">누구에게 보낼까요?</string>
    <string name="search_hint">받는 사람 이름, 계좌번호, 은행 검색</string>
</resources>