<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigationHome"
        android:icon="@drawable/ic_home_off"
        android:title="@string/home" />

    <item
        android:id="@+id/navigationMoneyBus"
        android:icon="@drawable/ic_moneybus_off"
        android:title="@string/money_bus" />

    <item
        android:id="@+id/navigationProduct"
        android:icon="@drawable/ic_product_off"
        android:title="@string/product" />

    <item
        android:id="@+id/navigationBenefit"
        android:icon="@drawable/ic_benefit_off"
        android:title="@string/benefit" />

    <item
        android:id="@+id/navigationAllMenu"
        android:icon="@drawable/ic_menu_off"
        android:title="@string/all_menu" />
</menu>